crates/nash-can/tests/snapshots/impls__global_overlap_between_core_modules.snap
---
source: crates/nash-can/tests/impls.rs
description: "module Keep exposing (Keep)\ntrait Keep 'a where\n    keep : 'a -> 'a\n\n\nmodule First exposing (..)\nimport Keep exposing (Keep)\nimpl Keep (list 'a, list 'a) where\n    keep x = x\n\n\nmodule Second exposing (..)\nimport Keep exposing (Keep)\nimpl Keep (list int, list int) where\n    keep x = x\n\n\nmodule Main exposing (..)\n"
info: diagnostic
---
nash::names::overlapping_impls

  × These `Keep.Keep` impls can both match the same trait arguments. The overlapping
  │ head is ((Primitive.list Primitive.int), (Primitive.list Primitive.int)):
   ╭─[src/Main.nash:2:1]
 1 │ module Main exposing (..)
 2 │ 
   · ┬┬
   · │╰── first impl in `First`
   · ╰── overlapping impl in `Second`
   ╰────
  help: Remove one impl or make their heads disjoint; ordinary trait constraints do not
        disambiguate heads.
