crates/nash-can/tests/snapshots/impls__impl_cannot_own_an_imported_trait_and_imported_heads.snap
---
source: crates/nash-can/tests/impls.rs
description: "module Lift exposing (Lift)\ntrait Lift 'small 'big where\n    lift : 'small -> 'big\n    lower : 'big -> 'small\n\n\nmodule Main exposing (..)\nimport Lift exposing (Lift)\nimport Primitive exposing (List)\nimport Builtin\nimpl Lift (List 'a) (List 'b) where\n    lift x = x\n    lower x = x\n"
info: diagnostic
---
nash::names::orphan_impl

  × This module cannot define an impl of `Lift.Lift` for Primitive.List,
  │ Primitive.List:
   ╭─[src/Main.nash:5:1]
 4 │     import Builtin
 5 │ ╭─▶ impl Lift (List 'a) (List 'b) where
 6 │ │       lift x = x
 7 │ ╰─▶     lower x = x
   ╰────
  help: An impl must be defined in the module that defines its trait or one of its head
        types. Move this impl to one of those modules.
