crates/nash-can/tests/snapshots/impls__impl_duplicate_methods_preserve_both_locations.snap
---
source: crates/nash-can/tests/impls.rs
expression: errors
---
[
    DuplicateMethod {
        name: "keep",
        first: Region {
            start: Position {
                line: 5,
                column: 5,
            },
            end: Position {
                line: 5,
                column: 9,
            },
        },
        second: Region {
            start: Position {
                line: 6,
                column: 5,
            },
            end: Position {
                line: 6,
                column: 9,
            },
        },
    },
]
