crates/nash-can/tests/snapshots/impls__impl_head_kind_mismatch.snap
---
source: crates/nash-can/tests/impls.rs
description: "module Main exposing (..)\n\ntype Color = Red\ntrait Functor 'f where\n    map : ('a -> 'b) -> 'f 'a -> 'f 'b\n\nimpl Functor Color where\n    map f xs = xs\n"
---
[
    KindMismatch {
        region: Region {
            start: Position {
                line: 7,
                column: 14,
            },
            end: Position {
                line: 7,
                column: 19,
            },
        },
        context: ImplHead {
            trait_: QualifiedName {
                home: ModuleName {
                    package: None,
                    name: "Main",
                },
                name: "Functor",
            },
            index: 0,
        },
        expected: Arrow(
            Type,
            Type,
        ),
        actual: Type,
    },
]
