crates/nash-can/tests/snapshots/impls__impl_heads_reject_non_constructor_shapes.snap
---
source: crates/nash-can/tests/impls.rs
description: "module Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep ('a -> 'b) where\n    keep x = x\n\n\nmodule Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep (('a -> 'b) : Term) where\n    keep x = x\n\n\nmodule Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep { value : 'a } where\n    keep x = x\n\n\nmodule Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep ('f 'a) where\n    keep x = x\n"
info: diagnostic
---
('a -> 'b)
nash::names::bad_instance_head

  × This impl head is a function type:
   ╭─[src/Main.nash:4:12]
 3 │     keep : 'a -> 'a
 4 │ impl Keep ('a -> 'b) where
   ·            ────────
 5 │     keep x = x
   ╰────
  help: Use a named type constructor or a tuple as the outermost type of an impl head.

(('a -> 'b) : Term)
nash::names::bad_instance_head

  × This impl head is a function type:
   ╭─[src/Main.nash:4:11]
 3 │     keep : 'a -> 'a
 4 │ impl Keep (('a -> 'b) : Term) where
   ·           ───────────────────
 5 │     keep x = x
   ╰────
  help: Use a named type constructor or a tuple as the outermost type of an impl head.

{ value : 'a }
nash::names::bad_instance_head

  × This impl head is an anonymous record:
   ╭─[src/Main.nash:4:11]
 3 │     keep : 'a -> 'a
 4 │ impl Keep { value : 'a } where
   ·           ──────────────
 5 │     keep x = x
   ╰────
  help: Use a named type constructor or a tuple as the outermost type of an impl head.

('f 'a)
nash::names::bad_instance_head

  × This impl head is an application of a type variable:
   ╭─[src/Main.nash:4:12]
 3 │     keep : 'a -> 'a
 4 │ impl Keep ('f 'a) where
   ·            ─────
 5 │     keep x = x
   ╰────
  help: Use a named type constructor or a tuple as the outermost type of an impl head.
